--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_ID = 8845598192-888eldjdq3tgdhonfpng76patguirf9a.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 MONGODB_URL = mongodb+srv://pavi:pavinane@cluster0.v8gv7yf.mongodb.net/?retryWrites=true&w=majority
-NEXTAUTH_URL = https://clone-prompts-jltvx2ogk-pavinane.vercel.app/
-NEXTAUTH_URL_INTERNAL= https://clone-prompts-jltvx2ogk-pavinane.vercel.app/
+NEXTAUTH_URL = https://clone-prompts-jltvx2ogk-pavinane.vercel.app
+NEXTAUTH_URL_INTERNAL= https://clone-prompts-jltvx2ogk-pavinane.vercel.app
 NEXTAUTH_SECRET = ilMi6Pc6UJ0qgpOuJVM8IvFatSnci1UyY80fM9pqtPI=
